--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.1.6",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "svelte-navigator": "^3.1.6"
   }
 }
